--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="navbar-collapse collapse"  id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-      <a class="nav-link" href="index.html"><strong> Home </strong></a>
+      <a class="nav-link" href="index.html"><strong> Home now</strong></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="method.html"><strong> Methodology </strong></a>
