--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="style.css" rel="stylesheet">
 
 </head>
@@ -26,7 +27,7 @@
       <div class="navbar-collapse collapse"  id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-      <a class="nav-link" href="index.html"><strong> Home now</strong></a>
+      <a class="nav-link" href="index.html"><strong> Home </strong></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="method.html"><strong> Methodology </strong></a>
