--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
   </div>
   <div class="carousel-item">
-    <img alt= "pressureBackground" src="img/toronto3.jpg">
+    <img alt= "pressureBackground" src="img/img2.jpg">
     <div class="carousel-caption">
       <h1 class="display-2" style="font-size:5vw;" > Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
       <h3>Arubrum Innovations</h3>
