--- a/product.html
+++ b/product.html
@@ -317,8 +317,8 @@ map.on('click', function(layer){
   <div id='output' class='ui-control'>
     
     
-    <h4><p id="weather" style=" color:rgb(14, 2, 2);"> Weather Forecast</p></h4>
-    <h6><p id="pointClick" style=" color:rgb(14, 2, 2);"> Click On any Point for Weather Information</p></h6>
+    <h4 style="font-size:1.5vw;"><p id="weather" style=" color:rgb(14, 2, 2);"> Weather Forecast</p></h4>
+    <h6 style="font-size: 1vw;" ><p id="pointClick" style=" color:rgb(14, 2, 2);"> Click On any Point for Weather Information</p></h6>
     <div>
       <p id="start" style=" color:rgb(14, 2, 2);"></p>
       </div>
