--- a/product.html
+++ b/product.html
@@ -185,8 +185,11 @@ crossorigin="">
           <li class="nav-item">
             <a class="nav-link" href="method.html"><strong> Methodology </strong></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="inter.html"><strong> Interpolation </strong></a>
+                </li>
     <li class="nav-item active">
-            <a class="nav-link" href="product.html"><strong> Product </strong></a>
+      <a class="nav-link" href="product.html"><strong> Map </strong></a>
           </li>
           <li class="nav-item ">
             <a class="nav-link" href="contact.html"><strong> Contact </strong></a>
