--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
           <li class="nav-item">
             <a class="nav-link" href="method.html"><strong> Methodology </strong></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="inter.html"><strong> Interpolation </strong></a>
+                </li>
     <li class="nav-item">
-            <a class="nav-link" href="product.html"><strong> Product </strong></a>
+            <a class="nav-link" href="product.html"><strong> Map </strong></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html"><strong> Contact </strong></a>
@@ -81,8 +84,14 @@
   </div>
   <hr class="light">
   <div class="col-12">
-    <h2 class="lead">Developing a web-based application that delivers an estimation of the true weather in Ontario every 
-      hour at the user's exact location (or chosen location) using only open-source technologies and solutions  </h2>
+    <h2 class="lead">Current popular weather services in Ontario provide the 
+      user with weather information corresponding to the closest available weather station. 
+      As is often the case, the closest weather station to a given location can be many kilometers away. 
+      When this is the case, the user’s weather information has the potential to be vastly different than reality. 
+      To fix this problem, Owen Andrews-Simons of Arubrum Innovations has asked our group to develop a product that 
+      can deliver an estimation of the true weather at the user’s exact location (or chosen location). 
+      Additionally, we have been tasked to use only open-source technologies and solutions (no- paid licenses) 
+      that can provide a new report every hour.   </h2>
   </div>
 </div>
 </div>
