--- a/method.html
+++ b/method.html
@@ -29,7 +29,7 @@
      <a class="nav-link" href="index.html"><strong> Home </strong></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="method.html"><strong> Methodology </strong></a>
+            <a class="nav-link" href="method.html"><strong> Work Done </strong></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="inter.html"><strong> Interpolation </strong></a>
