--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
           <li class="nav-item active">
       <a class="nav-link" href="index.html"><strong> Home </strong></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="method.html"><strong> Work Done </strong></a>
-          </li>
+          
           <li class="nav-item">
             <a class="nav-link" href="inter.html"><strong> Interpolation </strong></a>
                 </li>
@@ -80,7 +78,7 @@
 <div class="container-fluid padding">
 <div class="row welcome text-center">
   <div class="col-12">
-    <h1 class="display-4"> Description of Our Project</h1>
+    <h1 class="display-4"> Project Abstract</h1>
   </div>
   <hr class="light">
   <div class="col-12">
@@ -100,54 +98,25 @@
 <div class="container-fluid padding">
 <div class="row welcome text-center">
   <div class="col-12">
-    <h1 class="display-4"> Meet the Team </h1>
+    <h1 class="display-4"> About Study Area </h1>
   </div>
   <!--Horizontal rule-->
   <hr class="light"> 
+  <div class="col-12">
+    <h2 class="lead">Current popular weather services in Ontario provide the 
+      user with weather information corresponding to the closest available weather station. 
+      As is often the case, the closest weather station to a given location can be many kilometers away. 
+      When this is the case, the user’s weather information has the potential to be vastly different than reality. 
+      To fix this problem, Owen Andrews-Simons of Arubrum Innovations has asked our group to develop a product that 
+      can deliver an estimation of the true weather at the user’s exact location (or chosen location). 
+      Additionally, we have been tasked to use only open-source technologies and solutions (no- paid licenses) 
+      that can provide a new report every hour.   </h2>
+  </div>
 </div>
 </div>
 
 <!--- Cards -->
-<div class="container-fluid padding">
-<div class="row padding">
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <div class="card">
-      <img  alt= "aaron" class="card-img-top" src= "img/aaron.jpg">
-      <div class="card-body">
-        <h3 class="card-title text-center"> Aaron Jutzi</h3>
-        <h3 class="card-text text-center"> GIS & Web Developer </h3>
-        <p class="card-text text-center">Aaron is currently studying GIS (Applications Specialist) at Fleming College, 
-          and previously studied Geomatics at Carleton University. In his spare time Aaron enjoys exercising,
-        reading books and meditating.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <div class="card">
-      <img class="card-img-top" src= "img/hyerinm.jpg" alt= "hyerin">
-      <div class="card-body">
-        <h3 class="card-title text-center"> Hyerin Mun </h3>
-        <h3 class="card-text text-center"> Web & App Designer </h3>
-        <p class="card-text text-center"> Hyerin Mun is currently a GIS-Application Specialist at Fleming College. 
-          She recently graudated from University of Saskatchewan with a BSc. in Geology. 
-          Her duties are spatial analysis and web development.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <div class="card">
-      <img class="card-img-top" src= "img/team4.png" alt= "toby">
-      <div class="card-body">
-        <h3 class="card-text text-center"> Toby Agomuo</h3>
-        <h3 class="card-text text-center"> GIS & Web Developer </h3>
-        <p class="card-text text-center">Toby currently is a student of the GIS-Application Specialist program at Fleming college
-	 and previously studied geoinformatics at the University of Lagos. Toby is an avid traveler and a lover of history.
-	 </p>
-      </div>
-    </div>
-  </div>
-</div> 
-</div>
+
 
 <!--- Software used -->
 <div class="container-fluid padding">
