--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   <!--Horizontal rule-->
   <hr class="light"> 
   <div class="col-12">
+    <img alt ='IDW' src="img/ontario.jpg" style="margin-left: auto; margin-right: auto;" ></br>
     <h2 class="lead">Current popular weather services in Ontario provide the 
       user with weather information corresponding to the closest available weather station. 
       As is often the case, the closest weather station to a given location can be many kilometers away. 
