--- a/index.html
+++ b/index.html
@@ -103,15 +103,22 @@
   <!--Horizontal rule-->
   <hr class="light"> 
   <div class="col-12">
-    <img alt ='IDW' src="img/ontario.jpg" style="margin-left: auto; margin-right: auto;" ></br>
-    <h2 class="lead">Current popular weather services in Ontario provide the 
-      user with weather information corresponding to the closest available weather station. 
-      As is often the case, the closest weather station to a given location can be many kilometers away. 
-      When this is the case, the user’s weather information has the potential to be vastly different than reality. 
-      To fix this problem, Owen Andrews-Simons of Arubrum Innovations has asked our group to develop a product that 
-      can deliver an estimation of the true weather at the user’s exact location (or chosen location). 
-      Additionally, we have been tasked to use only open-source technologies and solutions (no- paid licenses) 
-      that can provide a new report every hour.   </h2>
+    <img alt ='IDW' src="img/ontario.jpg" style="margin-left: auto; margin-right: auto;" >
+    <p><h6 style="color: rgb(238, 10, 10);">Map Showing Ontario( the study Area) with weather stations</h6></p>
+  </br>
+
+
+
+  </br>
+    <h2 class="lead">The study is to be carried out in the Ontario province located in east-central Canada, 
+      with a total geographic area of approximately 1,076,000 square kilometers. 
+      Ontario is bordered by Manitoba, Hudson Bay and James Bay to the north, Quebec, the United States of America, and the Great Lakes. 
+      Ontario is one of the thirteen provinces and territories of Canada.
+      Located in Central Canada, it is Canada's most populous province, 
+      with 38.3 percent of the country's population, and is the second-largest province by total area. 
+      Ontario is sometimes conceptually divided into two regions, Northern Ontario and Southern Ontario. 
+      The great majority of Ontario's population and arable land is in the south. In contrast, the larger, 
+      northern part of Ontario is sparsely populated with cold winters and heavy forestation </h2>
   </div>
 </div>
 </div>
