--- a/inter.html
+++ b/inter.html
@@ -45,7 +45,7 @@
 <div class="container-sm border ">
     <div class="row welcome text-center">
       <div class="col-12">
-    <h2 class="text-center" style="color: brown;">Methodology: How we did it</h2></div>
+    <h2 class="text-center" style="color: brown;">Methodology: Whats was done</h2></div>
     <div class="col-12"> <h4 class="text-justify" style="color: rgb(42, 165, 69);">PREPARING THE STUDY AREA </h4></div>
     <h5 style="color: rgb(165, 46, 42);" >Weather Stations:</h5>
     <p class="text-justify">Downloaded the entire weather stations data of Canada from 
