--- a/inter.html
+++ b/inter.html
@@ -51,16 +51,16 @@
     <p class="text-justify">Downloaded the entire weather stations data of Canada from 
         Google as a KML file (https://www.google.com/maps/d/viewer?msa=0&dg=feature&mid=1zXdPVrRpsXd37wTN3nzcF
         fCQgdE&ll=47.12315462087478%2C-78.23151418166714&z=5) then exported our study area as a layer on its own.
-        This Layer was then brough to the map and clipped with the weather stations data to extract the weather stations in 
+        This Layer was then brought to the map and clipped with the weather stations data to extract the weather stations in 
         Ontario.
     </p>
          <div class="row">
             <div class="column">
-              <img src="img/canWeather.jpg" alt="Can" style="width:100%">
+              <img src="img/canWeather.jpg" alt="Can" style="width:70%">
               <p><h6 style="color: rgb(238, 10, 10);">Weather stations all around Canada</h6></p>
             </div>
             <div class="column">
-              <img src="img/onWeatherClipped.jpg" alt="On" style="width:100%">
+              <img src="img/onWeatherClipped.jpg" alt="On" style="width:70%">
               <p><h6 style="color: rgb(238, 10, 10);">Clipped Weather ststions in Ontario</h6></p>
             </div>
            
