--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       To fix this problem, Owen Andrews-Simons of Arubrum Innovations has asked our group to develop a product that 
       can deliver an estimation of the true weather at the user’s exact location (or chosen location). 
       Additionally, we have been tasked to use only open-source technologies and solutions (no- paid licenses) 
-      that can provide a new report every hour.   </h2>
+      that will provide weather information on any clicked point on the map.   </h2>
   </div>
 </div>
 </div>
