--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
   <div class="carousel-item active">
     <img alt= "weatherBackground" src="img/toronto3.jpg">
     <div class="carousel-caption">
-      <h1 class="display-2" style="font-size:5vw;"> Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
+      <h1 class="display-2" style="font-size:5vw; color: rgb(238, 10, 10);"> Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
       <h3>Arubrum Innovations</h3>
     </div>
   </div>
   <div class="carousel-item">
     <img alt= "pressureBackground" src="img/img2.jpg">
     <div class="carousel-caption">
-      <h1 class="display-2" style="font-size:5vw;" > Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
+      <h1 class="display-2" style="font-size:5vw; color: rgb(238, 10, 10);" > Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
       <h3>Arubrum Innovations</h3>
     </div>
   </div>
   <div class="carousel-item">
     <img alt= "cloudBackground" src="img/img3.jpg">
     <div class="carousel-caption">
-      <h1 class="display-2" style="font-size:5vw;" > Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
+      <h1 class="display-2" style="font-size:5vw; color: rgb(238, 10, 10);" > Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
       <h3>Arubrum Innovations</h3>
     </div>
   </div>
