--- a/inter.html
+++ b/inter.html
@@ -48,9 +48,8 @@
     <h2 class="text-center" style="color: brown;">Methodology: What was done</h2></div>
     <div class="col-12"> <h4 class="text-justify" style="color: rgb(42, 165, 69);">PREPARING THE STUDY AREA </h4></div>
     <h5 style="color: rgb(165, 46, 42);" >Weather Stations:</h5>
-    <p class="text-justify">Downloaded the entire weather stations data of Canada from 
-        Google as a KML file (https://www.google.com/maps/d/viewer?msa=0&dg=feature&mid=1zXdPVrRpsXd37wTN3nzcF
-        fCQgdE&ll=47.12315462087478%2C-78.23151418166714&z=5) then exported our study area as a layer on its own.
+    <p class="text-justify" >Downloaded the entire weather stations data of Canada from 
+        <a target="_blank" href= "https://www.google.com/maps/d/viewer?msa=0&dg=feature&mid=1zXdPVrRpsXd37wTN3nzcFfCQgdE&ll=67.73608253391662%2C-96.80000000000001&z=2">Google</a> as a KML file then exported our study area as a layer on its own.
         This Layer was then brought to the map and clipped with the weather stations data to extract the weather stations in 
         Ontario.
     </p>
@@ -82,7 +81,8 @@
      
     <h5 style="color: rgb(165, 46, 42);" >Interpolation Methods: </h5>
     <p class="text-justify">
-    Several interpolation methods were considered and tested for accuracy. We agreed on testing TIN, B-Spline, IDW,Natural Neighbour
+    Several interpolation methods were considered and tested for accuracy. We agreed on testing TIN, B-Spline, IDW, Natural Neighbour
+    and Nearest Neighbour
 
     </p>
          <div class="row">
@@ -186,7 +186,7 @@
         <p class="text-justify">
           The web application displays current weather information, wind speed, visibility and cloud condition.
           The web appliction is hosted on GitHub thus querying the web server provided by the client would be impossible.
-          To remedy this, we retrieved weather data from openweathermap using the api provided by openweathermap.org. The Open weather Map API is a featureopn-source weather 
+          To remedy this, we retrieved weather data from openweathermap using the api provided by <a target="_blank" href="https://openweathermap.org/">openweathermap.org</a>. The Open weather Map API is a featureopn-source weather 
           resource and comes in as a valid replacement with high accuracy. The web apllication queries openweathermap.org using jQuery, supplying
           coordinates of the clicked points on the map, in turn retrieveing weather information for the clicked point. This process 
           happens really fast. The map pane displays the user's current location onLoad, has a searchcbar as well as a selection
