--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@
   </div>
   <!--Horizontal rule-->
   <hr class="light"> 
-  <div class="col-12">
-    <img alt ='IDW' src="img/ontario.jpg" style="margin-left: auto; margin-right: auto;" >
-    <p><h6 style="color: rgb(238, 10, 10);">Map Showing Ontario( the study Area) with weather stations</h6></p>
+  
+   
+    <img alt ='IDW' width="600" height="400" src="img/ontario.jpg" style="margin-left: auto; margin-right: auto; max-width:100%;" >  </br>
+    
   </br>
+ 
 
 
 
